plang/testing/logs/false-incorrect/68/program68.p.p
dK :- ((((i (Av8P) zb R (rS (SE) Z8ADC (MgC) (p (HR) (N2x) cWgrZ)))))); (uscZ VH sLFR (L6E4a), kj8, p8 (CT7) (f DyqBd rOW) (A) sAN6l; uM (T) SQL4 rg (eE (F49lA)); w (NBkt) efjHV, hgz1P (EJK), (dl (idX CH9 (ItGf)))).


gE yWmrI :- bM l7d QWnam r (d), h42I, (tHWvx vpghN mzd0q); j, un SgaMG JDwqB, yveny (a FVvhx (gUPI t Z1)) K7FS (c) C9; sg9 (Sm5) (qsyy wT5) (Abl) (Ut7t); ohUr po9d, aC5IN (orWaC gpm (g oZEth (hg3jl) (ZUt)) WaX4e) if; aISy (YYF) EGe; u2rk bT8Kd Jj3f; iErw B ixT8 uAej, pPUm YV (lnOm (tWyy (d (G9JB) (wr))) (xtWW zH8O kdTmH (S)) (uJWEn GyV6 (npQx (DN)))); jC (pyW z) eYfn OS29N, je URx1 (M) (ApD) (ruxAB xzG (e (O) (v2a8O Ix XhSkE kcXpw nd)) Ycp (Q2m)), j (HgVu6) (MJ7) pzfLC (Nc), sYZZ, ccsF bYbIM; (qbT PnmlT (AWjYl) eZw); (iWN p8wXI (ZBbw9) (vQ20 FVZy2 lbmb Xn5jp)).
yjb4 WDCO KA (T) :- c (KVxwL) (Lg0R) EzGw.

uEwJ (Oxog) (rJ3) (BluB) Cs.
j6EZ CSTJ0 (bID (fII (r (F59uP) Pu (g KewY CXn (g)) (Q)) AiL) (IJbuc) (GkD) GeZs) PG.
iRd (B) :- ((lP2 (MCb), e (zX) cC (y3S (aRi JM) eO8P (b vVmkv J1G) (eehPY (Uq) wFxv (LNXpq) KB)) (qrl (FPf3N) (QtWi) gC), ia (V6) lSjp); f (fiaox H8L Utbj (ugV)) qtfNe (l VGYA (A) lmC fb)).


zqH7 (SdV).

jVW B89V0 :- (((u (YP) L6IRU (Fs); l1 qF7g6 vYc), j2)).


vPJb (d (U6) (KqoO)) (o (Jqgt) ku41 im) h (xaR MhG5V) :- agwlk; kwL kBc6.
yP6 w (ZQDNL) (CjRY).
gF2 (S8Q) W5N N O.
wHpn Y (Px) o I.

cV1Pc (L) :- u (R4); (o0l (c A3D) O Ui lV5, (iK v (h (Bij))), jtL roKd (faJOW (C) e fbVP (hbz1)) (cK1Rf oSfH (k) (mx (F) (cg) XdG pJkL) (aivOB)) z, wcHue (yM) (dR7ud (qq (QK)) i0oS) (f5k), (lDhq (W9))).


m MOXw hBx NNH G.

gy4 (U) (yjH (Ef5)) PKl.
? px8yX HHHS.



